<package format="2">
  <name>tsuten_simulation</name>
  <version>1.0.0</version>
  <description>Package for Tsuten simulation.</description>

  <maintainer email="mitukou1109@gmail.com">
    Mitsuhiro Sakamoto
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>